--- a/about.html
+++ b/about.html
@@ -81,10 +81,10 @@
     </header>
 
     <!-- About Section -->
-    <section class="pt-4 pb-5">
+    <section class="bg-light pt-4 pb-5">
         <div class="bg-light px-4 px-md-5">
 
-            <div class="row justify-content-center">
+            <div class="bg-light row justify-content-center">
                 <div class="col-xl-9 col-lg-10">
 
                     <!-- MAIN ABOUT CARD -->
@@ -110,7 +110,7 @@
                     <!-- HOBBIES -->
                     <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center mt-4">
                         <h3 class="fw-bold text-gradient about-title mb-3">
-                            <i class="bi bi-lightbulb me-2"></i>Hobbies
+                            <i class="bi bi-lightning-charge me-2"></i>Hobbies
                         </h3>
 
                         <p class="about-text mb-3">
@@ -118,10 +118,10 @@
                         </p>
 
                         <ul class="list-unstyled list-small text-start">
-                            <li class="mb-2">• Reading, especially science-fiction</li>
-                            <li class="mb-2">• Exploring new AI tools and building small experiments</li>
-                            <li class="mb-2">• Expanding my knowledge in sociology and philosophy</li>
-                            <li class="mb-2">• Watching and analyzing films</li>
+                            <li class="mb-2">Reading, especially science-fiction</li>
+                            <li class="mb-2">Exploring new AI tools and building small experiments</li>
+                            <li class="mb-2">Expanding my knowledge in sociology and philosophy</li>
+                            <li class="mb-2">Watching and analyzing films</li>
                         </ul>
                     </div>
 
