--- a/contact.html
+++ b/contact.html
@@ -49,33 +49,33 @@
                     <i class="bi bi-send-fill"></i>
                 </div>
                 <h1 class="fw-bolder">Let's get in touch</h1>
-                <p class="lead fw-light mb-2 d-flex align-items-center small">
+                <p class="lead fw-light mb-2 d-flex justify-content-center small">
                 <i class="bi bi-envelope me-2 text-gradient fs-5"></i>
                 <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient">
                     nesibe.pekcakar@gmail.com
                 </a>
             </p>
 
-            <p class="lead fw-light mb-2 d-flex align-items-center small">
+            <p class="lead fw-light mb-2 d-flex justify-content-center small">
                 <i class="bi bi-telephone me-2 text-gradient fs-5"></i>
                 +905384709269
             </p>
 
-            <p class="lead fw-light mb-2 d-flex align-items-center small">
+            <p class="lead fw-light mb-2 d-flex justify-content-center small">
                 <i class="bi bi-linkedin me-2 text-gradient fs-5"></i>
                 <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient">
                     in/nesibepekcakar
                 </a>
             </p>
 
-            <p class="lead fw-light mb-2 d-flex align-items-center small">
+            <p class="lead fw-light mb-2 d-flex justify-content-center small">
                 <i class="bi bi-github me-2 text-gradient fs-5"></i>
                 <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient">
                     /nesibepekcakar
                 </a>
             </p>
 
-            <p class="lead fw-light mb-2 d-flex align-items-center small">
+            <p class="lead fw-light mb-2 d-flex justify-content-center small">
                 <i class="bi bi-hdd-network me-2 text-gradient fs-5"></i>
                 <a href="https://huggingface.co/nesibepekcakar" target="_blank" class="text-gradient">
                     /nesibepekcakar
