--- a/about.html
+++ b/about.html
@@ -51,34 +51,27 @@
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light py-2 navbar-gradient">
-        <div class="container px-5">
-            <a class="navbar-brand fw-bold text-primary" href="index.html">Nesibe Nur Pekçakar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-semibold">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+   <!-- Navigation-->
+            <nav class="navbar navbar-expand-lg navbar-light py-2 navbar-gradient">
+                <div class="container px-5">
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Nur Pekçakar</span></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
 
     <!-- Header -->
-    <header class="bg-light pb-2">
-        <div class="text-center mb-2">
-            <h1 class="display-5 fw-bold mb-0">
-                <span class="text-gradient d-inline">About Nesibe</span>
-            </h1>
-        </div>
-    </header>
+    <div class="text-center mb-5">
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">About Nesibe</span></h1>
+                </div>
 
     <!-- About Section -->
     <section class="bg-light pt-4 pb-5">
@@ -109,7 +102,7 @@
 
                     <!-- HOBBIES -->
                     <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center mt-4">
-                        <h3 class="fw-bold text-gradient about-title mb-3">
+                        <h3 class="fw-bold text-gradient d-inline about-title mb-3">
                             <i class="bi bi-lightning-charge me-2"></i>Hobbies
                         </h3>
 
@@ -118,16 +111,16 @@
                         </p>
 
                         <ul class="list-unstyled list-small text-start">
-                            <li class="mb-2">Reading, especially science-fiction</li>
-                            <li class="mb-2">Exploring new AI tools and building small experiments</li>
-                            <li class="mb-2">Expanding my knowledge in sociology and philosophy</li>
-                            <li class="mb-2">Watching and analyzing films</li>
+                            <li class="mb-2">• Reading, especially science-fiction</li>
+                            <li class="mb-2">• Exploring new AI tools and building small experiments</li>
+                            <li class="mb-2">• Expanding my knowledge in sociology and philosophy</li>
+                            <li class="mb-2">• Watching and analyzing films</li>
                         </ul>
                     </div>
 
                     <!-- FAVORITES -->
                     <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center mt-4">
-                        <h3 class="fw-bold text-gradient about-title mb-3">
+                        <h3 class="fw-bold text-gradient d-inline about-title mb-3">
                             <i class="bi bi-star-fill me-2"></i>Favorites
                         </h3>
 
@@ -135,7 +128,7 @@
 
                             <!-- MOVIES -->
                             <div class="col-md-6 mb-4">
-                                <h5 class="fw-bold text-gradient about-subtitle mb-2">
+                                <h5 class="fw-bold text-gradient d-inline about-subtitle mb-2">
                                     <i class="bi bi-film me-2"></i>Movies
                                 </h5>
 
@@ -149,7 +142,7 @@
 
                             <!-- BOOKS -->
                             <div class="col-md-6 mb-4">
-                                <h5 class="fw-bold text-gradient about-subtitle mb-2">
+                                <h5 class="fw-bold text-gradient d-inline about-subtitle mb-2">
                                     <i class="bi bi-book-half me-2"></i>Books
                                 </h5>
 
