about section final update?

--- a/about.html
+++ b/about.html
@@ -66,18 +66,18 @@
                     <!-- MAIN ABOUT CARD -->
                     <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center">
                         <div class="mx-auto" style="max-width:800px">
-                            <p class="fs-6 lh-base text-start">
+                            <p class="fs-6 text-primary mt-3">
                                 I’ve always been drawn to <strong>software and artificial intelligence</strong>. 
                                 Through the science-fiction books and films I grew up with, these fields sparked my curiosity long before I studied engineering.
                             </p>
 
-                            <p class="fs-6 lh-base text-start">
+                            <p class="fs-6 text-primary mt-3">
                                 During my studies, I earned a <strong>full scholarship</strong>, 
                                 <strong>Erasmus funding</strong>, and a <strong>merit award</strong>—
                                 given to only three students in the department each year.
                             </p>
 
-                            <p class="fs-6 lh-base text-start">
+                            <p class="fs-6 text-primary mt-3">
                                 I focus on building systems that are <strong>practical, user-centered, and technically solid</strong>. 
                                 Quality, clarity, and thoughtful execution guide every project I build.
                             </p>
@@ -109,7 +109,7 @@
                     <!-- FAVORITES -->
                     <div class="card shadow-sm border-0 rounded-4 p-4 p-md-5 text-center mt-4">
                         <h3 class="fw-bold text-gradient d-inline fs-4 mb-3">
-                            <i class="bi bi-star-fill me-2"></i>Favorites
+                            <i class="bi bi-heart me-2"></i>Favorites
                         </h3>
 
                         <div class="row text-start mx-auto" style="max-width:800px">
@@ -120,17 +120,17 @@
                                     <i class="bi bi-film me-2"></i>Movies
                                 </h5>
                                 <ul class="list-unstyled fs-6 mb-0">
-                                    <li class="mb-1">• Westworld</li>
                                     <li class="mb-1">• Blade Runner</li>
+                                    <li class="mb-1">• pan's labyrinth</li>
                                     <li class="mb-1">• Terminator</li>
-                                    <li class="mb-1">• The Lord of the Rings</li>
+                                    <li class="mb-1">• Decision to Leave</li>
                                 </ul>
                             </div>
 
                             <!-- BOOKS -->
                             <div class="col-md-6 mb-4">
                                 <h5 class="fw-bold text-gradient d-inline fs-5 mb-2">
-                                    <i class="bi bi-book-half me-2"></i>Books
+                                    <i class="bi bi-book me-2"></i>Books
                                 </h5>
                                 <ul class="list-unstyled fs-6 mb-0">
                                     <li class="mb-1">• Dune</li>
