adjustments on about page

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                         <div class="mx-auto" style="max-width:800px">
                             <p class="fs-6 text-primary mt-3">
                                 I’ve always been drawn to <strong>software and artificial intelligence</strong>. 
-                                Through the science-fiction books and films I grew up with, these fields sparked my curiosity long before I studied engineering.
+                                Through the science fiction books and films I grew up with, these fields sparked my curiosity long before I studied engineering.
                             </p>
 
                             <p class="fs-6 text-primary mt-3">
@@ -99,7 +99,7 @@
                         </p>
 
                         <ul class="list-unstyled text-start mx-auto" style="max-width:800px">
-                            <li class="mb-2 fs-6">• Reading, especially science-fiction</li>
+                            <li class="mb-2 fs-6">• Reading, especially science fiction</li>
                             <li class="mb-2 fs-6">• Exploring new AI tools and building small experiments</li>
                             <li class="mb-2 fs-6">• Sociology and philosophy studies</li>
                             <li class="mb-2 fs-6">• Watching and analyzing films</li>
@@ -121,8 +121,8 @@
                                 </h5>
                                 <ul class="list-unstyled fs-6 mb-0">
                                     <li class="mb-1">• Blade Runner</li>
-                                    <li class="mb-1">• pan's labyrinth</li>
-                                    <li class="mb-1">• Terminator</li>
+                                    <li class="mb-1">• Pan's labyrinth</li>
+                                    <li class="mb-1">• Suspria</li>
                                     <li class="mb-1">• Decision to Leave</li>
                                 </ul>
                             </div>
@@ -135,7 +135,7 @@
                                 <ul class="list-unstyled fs-6 mb-0">
                                     <li class="mb-1">• Dune</li>
                                     <li class="mb-1">• Frankenstein</li>
-                                    <li class="mb-1">• Notes from Underground</li>
+                                    <li class="mb-1">• Notes from the Underground</li>
                                     <li class="mb-1">• Do Androids Dream of Electric Sheep?</li>
                                 </ul>
                             </div>
