--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                                 <ul class="list-unstyled fs-6 mb-0">
                                     <li class="mb-1">• Blade Runner</li>
                                     <li class="mb-1">• Pan's labyrinth</li>
-                                    <li class="mb-1">• Suspria</li>
+                                    <li class="mb-1">• Suspiria</li>
                                     <li class="mb-1">• Decision to Leave</li>
                                 </ul>
                             </div>
